<resources>
    <string name="app_name">BD</string>
    <string name="internship">The position of a student or trainee who works in an organization or in a company in order to gain knowledge and work experience.</string>
    <string name="paid_internship">Paid internships are the training for the students,recent graduates and others looking for the job experience that contains financial compensation</string>
    <string name="unpaid_internship">Unpaid internships are also for students,graduates and others looking for job experience but it doesnt contains a financial compensation </string>
    <string name="linkedin"><u>Linkedin.com</u></string>
    <string name="indeed"><u>Indeed.com</u></string>
    <string name="google"><u>Google.com</u></string>
    <string name="microsoft"><u>Microsoft.com</u></string>
    <string name="uber"><u>Uber.com</u></string>
    <string name="naukri"><u>Naukri.com</u></string>
    <string name="tata"><u>TataGroup.com</u></string>
    <string name="tmahindra"><u>TechMahindra.com</u></string>
    <string name="flm"><u>FrontLinesMedia.com</u></string>
    <string name="flm2"><u>FrontLinesMedia</u></string>
    <string name="glassdoor"><u>Glassdoor.com</u></string>
    <string name="courses">For a students and others who were looking for resources to learn the technical courses we will provide a different resources to learn the courses which are free and paid too</string>
    <string name="geeksforgeeks"><u>GeeksForGeeks.com</u></string>
    <string name="tpoint"><u>TutorialsPoint.com</u></string>
    <string name="javatpoint"><u>JavaTPoint.com</u></string>
    <string name="edx"><u>EDX.com</u></string>
    <string name="aicte"><u>AICTE.com</u></string>
    <string name="oclassrooms"><u>OpenClassRooms.com</u></string>
    <string name="glassdoorcourse"><u>GlassDoor.com</u></string>
    <string name="link1"><u>CodeWithHarry</u></string>
    <string name="link2"><u>NesoAcademy</u></string>
    <string name="link3"><u>Telusuko</u></string>
    <string name="link4"><u>CleverProgrammer</u></string>
    <string name="link5"><u>ProgrammingWithMosh</u></string>
    <string name="link6"><u>JennysLectures</u></string>
    <string name="link7"><u>JavaBrains</u></string>
    <string name="app"> EDX \n Udemy \n Unacademy \n Coursera \n GreatLearning \n SimplyLearn \n KhanAcademy \n ProgrammingHub \n SoloLearn</string>
    <string name="tn1and2"> Inshorts(Application) \n DevBytes(Application)</string>
    <string name="tn3"><u>Thetechportal.com</u></string>
    <string name="tn4"><u>TechCrush.com</u></string>
    <string name="tn5"><u>Wired.com</u></string>
    <string name="tn6"><u>TechRadar.com</u></string>
    <string name="tn7"><u>MacRumors.com</u></string>
    <string name="tn8"><u>DigitalTrends.com</u></string>
    <string name="hackathon">It is a coding event that brings interested people together to improve or to build a new software in a hackathon not only programmers are essential to complete a project it is composed of different roles to get a job done and it contains a time limit like 24hours,1day,2days based on the company or an event </string>
    <string name="h1"><u>DevPost.com</u></string>
    <string name="h2"><u>HackathonIO.com</u></string>
    <string name="h3"><u>MajorLeagueHacking.com</u></string>
    <string name="h4"><u>DevFolio.com</u></string>
    <string name="h5"><u>HackerEarth.com</u></string>
    <string name="h6"><u>HackClub.com</u></string>
    <string name="h">Every hackathon has a page on facebook by liking a one page will give you a 5 to 7 hackathon news in your feed and in instagram,twitter too</string>
    <string name="pl">It is used to communicate with the computer with a set of instructions by using languages like c,java,python we can create a software that solves the real world problems </string>
    <string name="febe">It contains FrontEnd and BackEnd \n <b>FrontEnd: </b>UI (UserInterface) part \n <b>BackEnd: </b>Functioning part</string>
    <string name="Aidetail"> Chatgpt,GoogleBard \n <b>For Searching web:</b> MicrosoftBing,\n Perplexity, Youchat \n <b>To generate images:</b> MidJourneyAi \n <b>For fun:</b> CharacterAi \n <b>For writing:</b> WriteSonicAi \n <b>For Copy:</b> CopyAi \n <b>For Ai art and writing:</b> JasperAi</string>
    <string name="plApps">These apps Can download from Playstore \n Mimo \n Enki \n ProgrammingHero \n Replit \n CodingChamp \n CodeAcademyGo \n SwiftPlaygrounds \n GrassHopper \n Encode \n DataChamp \n SoloLearn \n KhanAcademy \n Sololearn \n LearnSQLDatabase \n LearnSQL \n SQLPlay \n LearnMySQL</string>
    <string name="app_id">ca-app-pub-5613530884474706~8325841564</string>
    <string name="banner_ad_unit_id">ca-app-pub-5613530884474706/5975844546</string>
</resources>