<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".internshipActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutheader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/search_backside_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/internship_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Internships"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/about_internships"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="Paid internship &amp; Un-paid internship"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/internship_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/internship_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutheader">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Internship"
               android:textStyle="bold"
               android:textAlignment="viewStart"
               android:textColor="@color/blue"
               android:textSize="20dp"
               android:fontFamily="@font/aclonica"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/internship"
               android:textAlignment="viewStart"
               android:textColor="@color/blue"
               android:textSize="17dp"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Paid and un-paid"
               android:textStyle="bold"
               android:textAlignment="viewStart"
               android:textColor="@color/blue"
               android:textSize="17dp" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/paid_internship"
               android:textAlignment="viewStart"
               android:textColor="@color/blue"
               android:textSize="17dp" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/unpaid_internship"
               android:textAlignment="viewStart"
               android:textColor="@color/blue"
               android:textSize="17dp" />

           <TextView
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Resources:"
               android:textStyle="bold"
               android:textAlignment="viewStart"
               android:textColor="@color/blue"
               android:fontFamily="@font/aclonica"
               android:textSize="20dp" />

           <TextView
               android:id="@+id/linkedin"
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/linkedin"
               android:layout_marginStart="70dp"
               android:textColor="#1520A6"
               android:textSize="17dp" />

           <TextView
               android:id="@+id/indeed"
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/indeed"
               android:layout_marginStart="70dp"
               android:textColor="#1520A6"
               android:textSize="17dp" />

           <TextView
               android:id="@+id/google"
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/google"
               android:layout_marginStart="70dp"
               android:textColor="#1520A6"
               android:textSize="17dp" />

           <TextView
               android:id="@+id/microsoft"
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/microsoft"
               android:layout_marginStart="70dp"
               android:textColor="#1520A6"
               android:textSize="17dp" />

           <TextView
               android:id="@+id/uber"
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/uber"
               android:layout_marginStart="70dp"
               android:textColor="#1520A6"
               android:textSize="17dp" />

           <TextView
               android:id="@+id/glassdoor"
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/glassdoor"
               android:layout_marginStart="70dp"
               android:textColor="#1520A6"
               android:textSize="17dp" />

       </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>