<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".programmingLangActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_backside_background">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:background="@drawable/search_backside_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutheader"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/search_backside_background"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/internship_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Programming Languages"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:textSize="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/about_internships"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:text="Let's learn about programming"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toStartOf="@+id/internship_text"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/internship_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Programming"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:textColor="@color/blue"
        android:textSize="20dp"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/pl"
        android:textAlignment="viewStart"
        android:textColor="@color/blue"
        android:textSize="17dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/febe"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textSize="17dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Resources: "
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:layout_marginStart="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plApps"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textSize="17dp"/>



    </LinearLayout>



    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>